Add images and style to acknowledge page

--- a/static/css/default.css
+++ b/static/css/default.css
@@ -100,3 +100,20 @@ span#ft-poweredby {
 	color:#999;
 	float:right;
 }
+
+ul#timeline {
+	background-image:url(/static/image/tree.png);
+	width:850px;
+	padding:800px 0 0 0;
+	margin:0;
+}
+ul#timeline li {
+	border-width:2px;
+	border-color:green;
+	border-style:solid;
+	display:block;
+	width:40%;
+	margin:20px 0;
+	padding:5px;
+	clear:both;
+}
